--- a/pages/about.html
+++ b/pages/about.html
@@ -30,8 +30,7 @@
         <h2>About Me</h2>
         <p>I am an amateur photographer.
             <br>
-            I've been wanting to build my own photography website for a while and found Code First
-            Girls!
+            I've been wanting to build my own photography website for a while.
             <br>
             <br>
             The video below is from when I was working as an archaeologist in Cyprus.
